--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                         <p class="title">Sketchware / Coding Team</p>
                   </div>
             </div>
+       <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© Enter Name 2020</p>
+        </div>
+    </footer>
     <script src="./m_files/jquery.min.js.다운로드"></script>
     <script src="./m_files/bootstrap.min.js.다운로드"></script>
 
