--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>dynamic</title>
-    <meta name="description" content="Cock and ball torture (CBT), penis torture or dick torture is a sexual activity involving application of pain or constriction to the penis or testicles. This may involve directly painful activities, such as genital piercing, wax play, genital spanking, squeezing, ball-busting, genital flogging, urethral play, tickle torture, erotic electrostimulation, kneeing or kicking.[1] The recipient of such activities may receive direct physical pleasure via masochism, or emotional pleasure through erotic humiliation, or knowledge that the play is pleasing to a sadistic dominant. Many of these practices carry significant health risks.[2]">
+    <meta name="description" content="Dynamic's Site">
     <link rel="stylesheet" href="./m_files/bootstrap.min.css">
     <link rel="stylesheet" href="./m_files/css">
     <link rel="stylesheet" href="./m_files/css(1)">
