--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>dynamic</title>
-    <meta name="description" content="Dynamic's Site">
+    <meta name="description" content="Dynamic's Site[2]">
     <link rel="stylesheet" href="./m_files/bootstrap.min.css">
     <link rel="stylesheet" href="./m_files/css">
     <link rel="stylesheet" href="./m_files/css(1)">
