--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
        <footer class="py-5 bg-black">
         <div class="container">
-            <p class="text-center text-white m-0 small">Copyright&nbsp;© Enter Name 2020</p>
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© NONE 2020</p>
         </div>
     </footer>
     <script src="./m_files/jquery.min.js.다운로드"></script>
