--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                 <h2 class="text-center">Doing</h2>
             </div>
             <div class="row features">
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-magic icon"></i>
+                <div class="col-sm-6 col-md-4 item">
                     <h3 class="name">Discord Bot</h3>
                     <p class="description">I'm creating a dedicated chatbot for Discord in the Python.</p>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-cube icon"></i>
+                <div class="col-sm-6 col-md-4 item">
                     <h3 class="name">Make Mobile Apps</h3>
                     <p class="description"></p>
                     <p class="description">It is creating mobile applications with an app called sketchware.</p>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
+                <div class="col-sm-6 col-md-4 item">
                     <h3 class="name">Make PC Apps</h3>
                     <p class="description">I'm creating a PC application with an app called Visual Studio.</p>
                 </div>
