--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col-sm-6 col-md-4 item">
                     <h3 class="name">Make Mobile Apps</h3>
                     <p class="description"></p>
-                    <p class="description">It is creating mobile applications with an app called sketchware.</p>
+                    <p class="description">I'm creating mobile applications with an app called sketchware.</p>
                 </div>
                 <div class="col-sm-6 col-md-4 item">
                     <h3 class="name">Make PC Apps</h3>
