--- a/key/getkey.html
+++ b/key/getkey.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
-<head>
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-<style>
-body {
-background-color:#333333;
-}
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <style>
+      body {
+        background-color:#333333;
+      }
+    </style>
+    </html>
+  </head>
