--- a/key/getkey.html
+++ b/key/getkey.html
@@ -1,11 +1,40 @@
-<!doctype html>
 <html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <style>
-      body {
-        background-color:#333333;
-      }
-    </style>
-    </head>
-  </html>
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="shortcut icon" href="https://i.vgy.me/dMLKVO.png" type="image/x-icon" />
+<title>KRNL</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+body {
+background-color: #191919;
+}
+
+[class~=box]{width:1;}[class~=container],[class~=box]{background:#191919;}[class~=box]{border-radius:.1875pc;}[class~=box]{border-left-width:.0625pc;}[class~=box]{border-bottom-width:.0625pc;}[class~=box]{border-right-width:0;}[class~=box]{border-top-width:.0625pc;}[class~=box]{border-left-style:solid;}[class~=box]{border-bottom-style:solid;}[class~=box]{border-right-style:solid;}[class~=box]{border-top-style:solid;}[class~=box]{border-left-color:#dcdcdc;}[class~=box]{border-bottom-color:#dcdcdc;}[class~=box]{border-right-color:#dcdcdc;}[class~=box]{border-top-color:#dcdcdc;}[class~=box]{border-image:none;}[class~=box]{padding-left:18pt;}[class~=box]{padding-bottom:18pt;}[class~=box]{padding-right:18pt;}[class~=box]{padding-top:18pt;}[class~=box]{margin-left:0;}[class~=box]{margin-bottom:.5pc;}[class~=box]{margin-right:0;}[class~=box]{margin-top:.5pc;}[class~=container],[class~=ci]{height:50%;}[class~=container]{display:flex;}[class~=ci],[class~=container]{align-items:center;}[class~=container],[class~=ci]{justify-content:center;}[class~=container]{flex-direction:column;}[class~=boxt]{font-size:20px;}[class~=boxt]{font-weight:500;}[class~=boxt]{display:block;}[class~=boxt]{margin-bottom:.083333333in;}[class~=boxt]{color:#323232;}[class~=kc]{position:relative;}[class~=kc]{margin-bottom:10px;}[class~=ci]{position:absolute;}[class~=ci]{top:0;}[class~=ci]{left:0;}[class~=ci]{width:.416666667in;}[class~=carda],[class~=ci]{display:flex;}[class~=ci]{border-left-width:.010416667in;}[class~=ci]{border-bottom-width:.010416667in;}[class~=ci]{border-right-width:.010416667in;}[class~=ci]{border-top-width:.010416667in;}[class~=ci]{border-left-style:solid;}[class~=ci]{border-bottom-style:solid;}[class~=ci]{border-right-style:solid;}[class~=ci]{border-top-style:solid;}[class~=ci]{border-left-color:#dcdcdc;}[class~=ci]{border-bottom-color:#dcdcdc;}[class~=ci]{border-right-color:#dcdcdc;}[class~=ci]{border-top-color:#dcdcdc;}[class~=ci]{border-image:none;}[class~=ci]{background:#f8f8f8;}[class~=ci]{border-radius:.25pc 0 0 4px;}[class~=ckey]{width:330px;}[class~=ckey]{height:.416666667in;}[class~=ckey]{border-radius:3pt;}[class~=ckey]{border-left-width:0;}[class~=ckey]{border-bottom-width:.75pt;}[class~=ckey]{border-right-width:.75pt;}[class~=ckey]{border-top-width:.75pt;}[class~=ckey]{border-left-style:solid;}[class~=ckey]{border-bottom-style:solid;}[class~=ckey]{border-right-style:solid;}[class~=ckey]{border-top-style:solid;}[class~=ckey]{border-left-color:#dcdcdc;}[class~=ckey]{border-bottom-color:#dcdcdc;}[class~=ckey]{border-right-color:#dcdcdc;}[class~=ckey]{border-top-color:#dcdcdc;}[class~=ckey]{border-image:none;}[class~=ckey]{padding-left:.166666667in;}[class~=cardb],[class~=ckey]{padding-bottom:0;}[class~=ckey]{padding-right:.166666667in;}[class~=cardb],[class~=ckey]{padding-top:0;}[class~=ckey]{overflow:visble;}[class~=ckey]{color:#464646;}[class~=carda]{flex-direction:row-reverse;}[class~=carda]{height:.364583333in;}[class~=cardb]{height:100%;}[class~=cardb]{padding-left:.875pc;}[class~=cardb]{padding-right:.875pc;}[class~=cardb]{background:#4caf50;}[class~=cardb]{color:#fff;}[class~=cardb]{border-radius:5px;}[class~=cardb]{border-left-width:medium;}[class~=cardb]{border-bottom-width:medium;}[class~=cardb]{border-right-width:medium;}[class~=cardb]{border-top-width:medium;}[class~=cardb]{border-left-style:none;}[class~=cardb]{border-bottom-style:none;}[class~=cardb]{border-right-style:none;}[class~=cardb]{border-top-style:none;}[class~=cardb]{border-left-color:currentColor;}[class~=cardb]{border-bottom-color:currentColor;}[class~=cardb]{border-right-color:currentColor;}[class~=cardb]{border-top-color:currentColor;}[class~=cardb]{border-image:none;}[class~=cardb]{font-weight:500;}[class~=cardb]{box-shadow:0 2px 2.25pt -.75pt rgba(0,0,0,.14);}[class~=cdd]{font-size:.145833333in;}[class~=cdd]{color:#646464;}[class~=cdd]{display:block;}[class~=cdd]{margin-bottom:16.5pt;}
+
+</style>
+</head>
+<body>
+<div style="margin-top:200px;" class="container">
+<div class="kc">
+<input style="background-color:#f8f8f8;" id="current_key" class="ckey" value= "3523d16e7ddc7babdbe1108a7ef1b1a4df05a74d" type="text">
+</div>
+<div class="carda">
+<button style="background-color:#1D1D1D; border-color:white;" onclick="copykey()" class="cardb">Copy Key</button>
+</div>
+
+<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >By using this key you agree to our rules.</span>
+<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >Breaking any of these rules will lead to a blacklist.</span>
+<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >This key only works for you!.</span>
+<script>
+function copykey()
+{
+document.getElementById("current_key").select();
+document.execCommand("copy");
+alert("Copied Key To Clipboard");
+}
+
+
+</script>
+</body>
+</html>
