--- a/key/getkey.html
+++ b/key/getkey.html
@@ -2,7 +2,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="shortcut icon" href="https://i.vgy.me/dMLKVO.png" type="image/x-icon" />
-<title>KRNL</title>
+<title>DYNAMIC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
@@ -23,9 +23,8 @@ background-color: #191919;
 <button style="background-color:#1D1D1D; border-color:white;" onclick="copykey()" class="cardb">Copy Key</button>
 </div>
 
-<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >By using this key you agree to our rules.</span>
-<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >Breaking any of these rules will lead to a blacklist.</span>
-<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >This key only works for you!.</span>
+<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >This is your key. Be careful not to lose it.</span>
+<span style="color: white; font-family:Arial Black;font-size:16px;font-style:normal; top:100px;" >Do not share this key with others.</span>
 <script>
 function copykey()
 {
