--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>dynamic</title>
+    <title>DYNAMIC</title>
     <meta name="description" content="Dynamic Site">
     <link rel="stylesheet" href="./m_files/bootstrap.min.css">
     <link rel="stylesheet" href="./m_files/css">
