--- a/key/getkey.html
+++ b/key/getkey.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="shortcut icon" href="https://dynamic.o-r.kr/icon64.png">
+<link rel="shortcut icon" href="https://dynamic.o-r.kr/favicon.ico">
 <title>DYNAMIC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
