--- a/key/TestKey.html
+++ b/key/TestKey.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>TestKey</title>
-      <meta http-equiv = "refresh" content = "2; url = https://naver.com" />
-   </head>
-   <body>
-      <p>TestKey</p>
-   </body>
-</html>
+whitelist
