--- a/download/test.html
+++ b/download/test.html
@@ -22,7 +22,7 @@
 
 <h2>다운로드</h2>
 
-<button class="btn success" onClick="location.href='https://naver.com/'">Download</button>
+<button class="btn success" onClick="location.href='https://dynamic.o-r.kr/download/test.html'">Download</button>
 
 
 </body>
